2021-08-26  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* runorder.mk (threestage): remove reference to this test; VC nmake doesn't
	appear to notice it's referenced, which is disturbing, but GNU make does.
	* common.mk (threestage): Likewise.
	* exit2.c: Fix type cast truncation by changing (void * -> int) to
	(void * -> size_t).
	* exit3.c: Likewise.

2018-08-19  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* threestage.c: Delete.
	* rwlock7.c: Delete.
	* rwlock8.c: Delete.
	* rwlock7_1.c: Delete.
	* rwlock8_1.c: Delete.

2018-08-10  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* Makefile (clean): remove *.idb files.

2018-08-07  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* GNUmakefile.in (DLL_VER): rename as PTW32_VER.
	* Makefile (DLL_VER): Likewise.
	* Bmakefile (DLL_VER): Likewise; does anyone use this anymore?
	* Makefile: Variable renaming: e.g. VCLIB to VCIMP for DLL import
	library pthreadVC2.lib and VCLIB now holds static library name
	libpthreadVC2.lib, and similar for the other cleanup method versions.
	* equal0.c: New test. If this test fails, the library's process init
	routines have likely not been invoked or failed.
	* common.mk: Add new test.
	* runorder.mk: Likewise.

2018-07-22  Mark Pizzolato <markpizzolato dash pthreads dash win32 at subscriptions dot pizzolato dot net>

	* Makefile: Change the various static test runs to actually
	compile with /MT or /MTd, i.e. No mixed /MT and /MD. Static
	builds no longer create a separate pthreads*.lib static library
	because errno does not work across that linkage.
	* sequence1.c: Use more reasonable number of threads to avoid
	resource limits.

2016-12-25  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* Change all license notices to the Apache License 2.0

2016-12-21  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* mutex6.c: fix random failures by using a polling loop to replace
	a single Sleep().